Fix: 입력받은 당첨 번호가 6개가 아니면 에러메세지 출력하고 반복 입력 받도록 수정